<resources>
    <string name="app_name">OrderFood</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="dateofbirth">Nhập ngày sinh</string>
    <string name="idcard">CMND</string>
    <string name="yes">Đồng ý</string>
    <string name="exit">Thoát</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="fillUserName">Vui lòng nhập tên đăng nhập</string>
    <string name="fillPassword">Vui lòng nhập mật khẩu</string>
    <string name="addSuccess">Thêm thành công</string>
    <string name="addFailed">Thêm thất bại</string>
    <string name="home">Trang chủ</string>
    <string name="menu">Thực đơn</string>
    <string name="employee">Nhân viên</string>
    <string name="statistic">Thống kê</string>
    <string name="setting">Cài đặt</string>
    <string name="open"> Mở</string>
    <string name="addtables">Thêm bàn ăn</string>
    <string name="close">Đóng</string>
    <string name="tableName">Tên bàn ăn</string>
</resources>
