<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundLogin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/size30sp"
        android:layout_above="@id/lnLoginForm"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/size70dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        />
    <ImageView
        android:layout_width="@dimen/size150dp"
        android:layout_height="@dimen/size150dp"
        android:src="@drawable/logodangnhap"
        android:layout_alignRight="@id/lnLoginForm"
        android:layout_marginTop="@dimen/size80dp"
        />
    <LinearLayout
        android:id="@+id/lnLoginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <EditText
            android:id="@+id/edlogin_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorGrey"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/colorGrey"
            />
        <EditText
            android:id="@+id/edlogin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorGrey"
            android:drawableLeft="@drawable/password"
            android:password="true"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            android:textColor="@color/colorGrey"

            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/red"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"

            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="@dimen/size10dp"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"

            />
    </LinearLayout>

</RelativeLayout>